8004713: Stackoverflowerror thrown when thread stack straddles 0x80000000

Use unsigned comparison when checking for stack overflow

Reviewed-by: kvn, twisti